Fixed the issue of clipping during zoom-in

--- a/Lab8/styles/header.css
+++ b/Lab8/styles/header.css
@@ -1,7 +1,9 @@
 .header {
     display: flex;
     height:85px;
-    width:100%;
+    width:1260px;
+    max-width: 100%;
+    margin:0 auto;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
